# resonate-essentials

./: LICENSE  README.md
local-starter/: pyproject.toml
local-starter/src/: app.py
summarization-agent/src/: app.py
